Integrating BootStrap Framwork on our project

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,10 @@
 {% extends "catalog.html" %}
 
+{% block sitebar %}
+  <h4>Our Sidebar</h4>
+    <p>Our shopping categories will go here</p>
+{% endblock %}
 {% block content %}
-   <h1>Welcome</h1>
+   <h4>Welcome</h4>
+    <p>Our shopping cart content goes here</p>
 {% endblock %}
