--- a/templates/base.html
+++ b/templates/base.html
@@ -11,9 +11,13 @@
     <meta name="keywords" content="{{ meta_keywords }}">
     <meta name="description" content="{{ meta_description }}">
     <link rel="icon" href="">
-    <link rel="stylesheet" href="{% static "css/style.css" %}">
+    <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
+    <link rel="stylesheet" href="{% static "css/base.css" %}">
 </head>
 <body>
     {% block site_wrapper %}{% endblock %}
+
+    <script src="{% static "js/jquery3.js" %}"></script>
+    <script src="{% static "js/bootstrap.min.js" %}"></script>
 </body>
 </html>
