--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -1,39 +1,45 @@
 {% extends "base.html" %}
 
 {% block site_wrapper %}
-   <div id="main">
-       <a href="#content" class="skip_link">Skip to main content</a>
-       <div id="banner">
-           <div class="bannerIEPadder">
-               <div class="cart_box">
-                   [link to out cart goes here]
-               </div>
-               Modern Artist
-           </div>
-       </div>
-   <div id="navigation">
-       <div class="navIEPadder">
-           [navigations goes here]
-       </div>
-   </div>
-       <div id="middle">
-           <div id="sidebar">
-               <div class="sidebarIEPadder">
-               [searchbox goes here]<br>
-               [category listing goes here]
-           </div>
-           </div>
-       </div>
-       <div id="content">
-           <a name="content"></a>
-           <div class="contentIEPadder">
-               {% block content %} {% endblock %}
-           </div>
-       </div>
-   </div>
-   <div id="footer">
-       <div class="footerIEPadder">
-           [footer goes here]
-       </div>
-   </div>
+<div class="container-fluid">
+       <!-- Our Navigation bar -->
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Musical Instrument</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">My Cart</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav><br><br><br>
+    <!-- End Navigation bar -->
+
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-4">
+                {% block sitebar %} {% endblock %}
+            </div>
+            <div class="col-sm-8">
+                {% block content %}{% endblock %}
+            </div>
+        </div>
+    <div class="mastfoot">
+            <div class="inner">
+              <p>View <a href="">E-commerce Demo</a>, by <a href="https://twitter.com/henrymbuguak">HenryLab</a>.</p>
+            </div>
+          </div>
+    </div>
+</div>
+
+
+
 {% endblock %}
