--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -16,6 +16,9 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Product</a></li>
+            <li><a href="#">About</a></li>
             <li><a href="#">My Cart</a></li>
           </ul>
         </div>
